--- a/Mood_Busters/StringConst.resx
+++ b/Mood_Busters/StringConst.resx
@@ -133,6 +133,9 @@
   <data name="ErrLoading" xml:space="preserve">
     <value>Failed to load file </value>
   </data>
+  <data name="ErrNull" xml:space="preserve">
+    <value>Null Pointer Excepsion</value>
+  </data>
   <data name="ErrProccesing" xml:space="preserve">
     <value>Error processing</value>
   </data>
